// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeprecatedTable Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
  />
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot for cta content alternate settings 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="true"
    data-has-expandable-action="false"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        <svg
          class="el-icon"
          color="secondary"
          data-size="100%"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="mocked-styled-9 el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="foo-bar el-table-cta-cell"
          role="cell"
          tabindex="0"
        >
          <div
            class="mocked-styled-11 el-table-cta-icon-container"
          >
            property
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot for expandable content alternate settings 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="false"
    data-has-expandable-action="true"
    data-num-columns-excl-action-col="0"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Some Content
      </div>
    </div>
    <div
      class="mocked-styled-9 el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="foo-bar el-table-expandable-row-trigger-cell"
          role="cell"
          tabindex="0"
        >
          <svg
            class="el-icon"
            color="inherit"
            data-size="100%"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm5 2a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm7 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="mocked-styled-12 el-table-expandable-row"
      >
        <div
          class="mocked-styled-13 el-table-expandable-container"
        >
          <p>
            I am the content that is only visible when expanded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with full props and cta content 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="true"
    data-has-expandable-action="false"
    data-num-columns-excl-action-col="8"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        aria-label="Property"
        class="el-span2 el-deprecated-table-header"
        role="columnheader"
      >
        Property
      </div>
      <div
        aria-label="Customer"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Customer
      </div>
      <div
        aria-label="Client A/C"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Client A/C
      </div>
      <div
        aria-label="Description"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Description
      </div>
      <div
        aria-label="Request Date"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Request Date
      </div>
      <div
        aria-label="Amount"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Amount
      </div>
      <div
        aria-label="Payment Status"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Payment Status
      </div>
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Some Action
      </div>
    </div>
    <div
      class="el-is-active el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="el-span2 el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          property
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Property"
          >
            Mt Ash Jacket, Brassey Road
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          user
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Customer"
          >
            Mr Johnny Corrigan
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Alternate Lettings Client Acc
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Tenant Payment Request
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Request Date"
          >
            19 Apr 2021
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            £50.00
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Not Requested
          </div>
        </div>
        <div
          class="foo-bar el-table-cta-cell"
          role="cell"
          tabindex="0"
        >
          <div
            class="mocked-styled-11 el-table-cta-icon-container"
          >
            property
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with full props and expandable content 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="false"
    data-has-expandable-action="true"
    data-num-columns-excl-action-col="8"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        aria-label="Property"
        class="el-span2 el-deprecated-table-header"
        role="columnheader"
      >
        Property
      </div>
      <div
        aria-label="Customer"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Customer
      </div>
      <div
        aria-label="Client A/C"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Client A/C
      </div>
      <div
        aria-label="Description"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Description
      </div>
      <div
        aria-label="Request Date"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Request Date
      </div>
      <div
        aria-label="Amount"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Amount
      </div>
      <div
        aria-label="Payment Status"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Payment Status
      </div>
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        <svg
          class="el-icon"
          color="secondary"
          data-size="100%"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="el-is-active el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="el-span2 el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          property
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Property"
          >
            Mt Ash Jacket, Brassey Road
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          user
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Customer"
          >
            Mr Johnny Corrigan
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Alternate Lettings Client Acc
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Tenant Payment Request
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Request Date"
          >
            19 Apr 2021
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            £50.00
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Not Requested
          </div>
        </div>
        <div
          class="mocked-styled-8 el-table-expandable-row-trigger-cell"
          role="cell"
          tabindex="0"
        >
          <svg
            class="el-icon"
            color="inherit"
            data-size="100%"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm5 2a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm7 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="el-is-active el-table-expandable-row"
      >
        <div
          class="mocked-styled-13 el-table-expandable-container"
        >
          <p>
            I am the content that is only visible when expanded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with varied number columns 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
  />
</DocumentFragment>
`;
